@@ -10,6 +10,10 @@ Version 1.3 (2005-03-??)
 - (UNFINISHED) New RemotePyInterpreter example that demonstrates an
   out-of-process Python interpreter (primarily for IDE uses).
 
+- New HotKeyPython example in AppKit that demonstrates how to use
+  Carbon global hot keys from a PyObjC application.  Also demonstrates
+  how to use a NSApplication subclass.
+
 - Key-Value Observing support is now automatic in Python classes that
   descend from ``NSObject``, unless they implement a custom
   ``willChangeValueForKey:``, ``didChangeValueForKey:``, or
@@ -18,7 +22,7 @@ Version 1.3 (2005-03-??)
   whether ``foo`` is a ``property``, ``ivar``, or just in the
   ``__dict__``.
 
-- New ``Inject`` folder in Examples, with a PyInterpreter
+- New Inject folder in Examples, with a PyInterpreter
   example that will inject a GUI Python interpreter into any process.
 
 - New ``objc.inject()`` function for Mac OS X 10.3 and later,
